syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.sustain.census";

message TargetQueryRequest {
  CensusResolution resolution = 1;
  Predicate predicate = 2;
}

message TargetQueryResponse {
  CensusResolution resolution = 1;
  message SpatialInfo {
    sint32 geoid = 1;
    string name = 2;
  }
  SpatialInfo spatialInfo = 2;
}

enum CensusResolution {
  State = 0;
  County = 1;
  Tract = 2;
}

// predicates are combined using combine operators to form expressions
//message Expression {
//  enum CombineOperator {
//    AND = 0;
//    OR = 1;
//    DIFF = 2;
//  }
//  oneof First {
//    Expression expression1 = 1;
//    Predicate predicate1 = 2;
//  }
//  CombineOperator combineOp = 3;
//  oneof Second {
//    Expression expression2 = 4;
//    Predicate predicate2 = 5;
//  }
//}

// finest-grain condition that defines a query scope
message Predicate {
  enum ComparisonOperator {
    EQUAL = 0;
    GREATER_THAN = 1;
    LESS_THAN = 2;
    GREATER_THAN_OR_EQUAL = 3;
    LESS_THAN_OR_EQUAL = 4;
  }
  Feature feature = 1;
  enum Feature {
    Population = 0;
    Income = 1;
  }
  ComparisonOperator comparisonOp = 2;
  oneof value {
    string stringValue = 3;
    sint64 integerValue = 4;
    double doubleValue = 5;
  }
}
